--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/hospital_db?createDataba
 quarkus.datasource.jdbc.driver=com.mysql.cj.jdbc.Driver
 
 
-quarkus.hibernate-orm.database.generation=none 
+quarkus.hibernate-orm.database.generation=update 
 quarkus.hibernate-orm.log.sql=true
 
 
