--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,14 @@ quarkus.datasource.password=root
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/hospital_db?createDatabaseIfNotExist=true
 quarkus.datasource.jdbc.driver=com.mysql.cj.jdbc.Driver
 
-
 quarkus.hibernate-orm.database.generation=update 
 quarkus.hibernate-orm.log.sql=true
 
-
 quarkus.datasource.jdbc.max-size=20
 quarkus.datasource.jdbc.min-size=2
+
+mp.jwt.verify.issuer=vidaplus-auth
+mp.jwt.verify.publickey.location=META-INF/resources/publicKey.pem
+quarkus.jwt.token.header=Authorization
+quarkus.jwt.token.scheme=Bearer
+smallrye.jwt.sign.key.location=classpath:META-INF/resources/privateKey.pem
