Terminado validação dos tokens e começado adição de logs para os comandos CRUD.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ quarkus.datasource.password=root
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/hospital_db?createDatabaseIfNotExist=true
 quarkus.datasource.jdbc.driver=com.mysql.cj.jdbc.Driver
 
-quarkus.hibernate-orm.database.generation=update 
+quarkus.hibernate-orm.database.generation=validate 
 quarkus.hibernate-orm.log.sql=true
 
 quarkus.datasource.jdbc.max-size=20
@@ -16,3 +16,7 @@ mp.jwt.verify.publickey.location=META-INF/resources/publicKey.pem
 quarkus.jwt.token.header=Authorization
 quarkus.jwt.token.scheme=Bearer
 smallrye.jwt.sign.key.location=classpath:META-INF/resources/privateKey.pem
+
+quarkus.http.auth.permission.authenticated.policy=authenticated
+quarkus.http.auth.permission.public.paths=/auth/*
+quarkus.http.auth.permission.public.policy=permit
