--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ smallrye.jwt.sign.key.location=classpath:META-INF/resources/privateKey.pem
 quarkus.http.auth.permission.authenticated.policy=authenticated
 quarkus.http.auth.permission.public.paths=/auth/*
 quarkus.http.auth.permission.public.policy=permit
+
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
