--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 quarkus.datasource.db-kind=mysql
-quarkus.datasource.username=root
-quarkus.datasource.password=root
+quarkus.datasource.username=${DB_USER:root}
+quarkus.datasource.password=${DB_PASSWORD:root}
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/hospital_db?createDatabaseIfNotExist=true
 quarkus.datasource.jdbc.driver=com.mysql.cj.jdbc.Driver
 
